manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otel-system
  labels:
    name: otel-system
